Adjustments to support VS 2019
+ modified vsixmanifest to install on VS 2019 (had to remove nuget https://github.com/axodox/VsixUpdater for that)
+ Updated all NuGet Packages to current versions, so that project would compile (included a number of new packages from dependencies)
+ Changed RegexTesterPackage to derive from AsyncPackage to be compatible with new async loading model (avoids deprecation warning in VS2019).

--- a/RegexTester/changes.txt
+++ b/RegexTester/changes.txt
@@ -1,6 +1,8 @@
-﻿Version 2.0.0 - May 3, 2017:
+﻿Version 2.1.0 - May 13, 2019:
+- Migration to Visual Studio 2019.
+
+Version 2.0.0 - May 3, 2017:
 - Migration to Visual Studio 2017.
-NOTE: Old releases are available on GitHub here: https://github.com/sharomank/regex-tester/releases
 
 Version 1.5.2 - Jul 30, 2015:
 - Improve regex parsing when regular expression is changing (issue #7).
@@ -13,6 +15,8 @@ Version 1.5.0 - Feb 19, 2015:
 
 Version 1.4.2 - Aug 21, 2013:
 - Added support for Visual Studio 2013.
+
+NOTE: Old releases are available on GitHub here: https://github.com/sharomank/regex-tester/releases
 
 Old Versions:
 1.4.1 - Fixed support for Visual Studio 2010.
